--- a/public/index.html
+++ b/public/index.html
@@ -1,25 +1,19 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="renderer" content="webkit">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title><%= webpackConfig.name %></title>
-	  <style>
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <meta name="renderer" content="webkit">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+  <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+  <title><%= webpackConfig.name %></title>
+  <style>
     html,
     body,
     #app {
       height: 100%;
       margin: 0px;
       padding: 0px;
-    }
-    .chromeframe {
-      margin: 0.2em 0;
-      background: #ccc;
-      color: #000;
-      padding: 0.2em 0;
     }
 
     #loader-wrapper {
@@ -36,88 +30,145 @@
       position: relative;
       left: 50%;
       top: 50%;
-      width: 150px;
-      height: 150px;
+      width: 30%;
+      height: 30%;
       margin: -75px 0 0 -75px;
-      border-radius: 50%;
-      border: 3px solid transparent;
-      border-top-color: #FFF;
-      -webkit-animation: spin 2s linear infinite;
-      -ms-animation: spin 2s linear infinite;
-      -moz-animation: spin 2s linear infinite;
-      -o-animation: spin 2s linear infinite;
-      animation: spin 2s linear infinite;
       z-index: 1001;
     }
 
-    #loader:before {
-      content: "";
-      position: absolute;
-      top: 5px;
-      left: 5px;
-      right: 5px;
-      bottom: 5px;
-      border-radius: 50%;
-      border: 3px solid transparent;
-      border-top-color: #FFF;
-      -webkit-animation: spin 3s linear infinite;
-      -moz-animation: spin 3s linear infinite;
-      -o-animation: spin 3s linear infinite;
-      -ms-animation: spin 3s linear infinite;
-      animation: spin 3s linear infinite;
+    .chromeframe {
+      margin: 0.2em 0;
+      background: #ccc;
+      color: #000;
+      padding: 0.2em 0;
     }
 
-    #loader:after {
-      content: "";
-      position: absolute;
-      top: 15px;
-      left: 15px;
-      right: 15px;
-      bottom: 15px;
-      border-radius: 50%;
-      border: 3px solid transparent;
-      border-top-color: #FFF;
-      -moz-animation: spin 1.5s linear infinite;
-      -o-animation: spin 1.5s linear infinite;
-      -ms-animation: spin 1.5s linear infinite;
-      -webkit-animation: spin 1.5s linear infinite;
-      animation: spin 1.5s linear infinite;
-    }
-
-
-    @-webkit-keyframes spin {
-      0% {
-        -webkit-transform: rotate(0deg);
-        -ms-transform: rotate(0deg);
-        transform: rotate(0deg);
-      }
-      100% {
-        -webkit-transform: rotate(360deg);
-        -ms-transform: rotate(360deg);
-        transform: rotate(360deg);
-      }
-    }
+    /* KEYFRAMES */
 
     @keyframes spin {
-      0% {
-        -webkit-transform: rotate(0deg);
-        -ms-transform: rotate(0deg);
-        transform: rotate(0deg);
+      from {
+        transform: rotate(0);
       }
-      100% {
-        -webkit-transform: rotate(360deg);
-        -ms-transform: rotate(360deg);
-        transform: rotate(360deg);
+      to {
+        transform: rotate(359deg);
       }
     }
 
+    @keyframes configure-clockwise {
+      0% {
+        transform: rotate(0);
+      }
+      25% {
+        transform: rotate(90deg);
+      }
+      50% {
+        transform: rotate(180deg);
+      }
+      75% {
+        transform: rotate(270deg);
+      }
+      100% {
+        transform: rotate(359deg);
+      }
+    }
+
+    @keyframes configure-xclockwise {
+      0% {
+        transform: rotate(45deg);
+      }
+      25% {
+        transform: rotate(-45deg);
+      }
+      50% {
+        transform: rotate(-135deg);
+      }
+      75% {
+        transform: rotate(-215deg);
+      }
+      100% {
+        transform: rotate(-305deg);
+      }
+    }
+
+    @keyframes pulse {
+      from {
+        opacity: 1;
+        transform: scale(1);
+      }
+      to {
+        opacity: .25;
+        transform: scale(.75);
+      }
+    }
+
+    /* GRID STYLING */
+
+    * {
+      box-sizing: border-box;
+    }
+
+    .spinner-box {
+      /*width: 220px;*/
+      /*height: 220px;*/
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background-color: transparent;
+    }
+
+    /* X-ROTATING BOXES */
+
+    .configure-border-1 {
+      width: 220px;
+      height: 220px;
+      padding: 3px;
+      position: absolute;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background: #ffab91;
+      animation: configure-clockwise 3s ease-in-out 0s infinite alternate;
+    }
+
+    .configure-center {
+      width: 220px;
+      height: 220px;
+      padding: 3px;
+      position: absolute;
+      display: flex;
+      z-index: 999999;
+      justify-content: center;
+      align-items: center;
+      background: rgba(0,0,0,0);
+    }
+    #loaderLogo{
+      width: 150px;
+    }
+    .configure-border-2 {
+      width: 220px;
+      height: 220px;
+      padding: 3px;
+      left: -115px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background: rgb(63, 249, 220);
+      transform: rotate(45deg);
+      animation: configure-xclockwise 3s ease-in-out 0s infinite alternate;
+    }
+
+    .configure-core {
+      width: 100%;
+      height: 100%;
+      background-color: #37474f;
+    }
 
     #loader-wrapper .loader-section {
       position: fixed;
       top: 0;
       width: 51%;
       height: 100%;
-      background: #7171C6;
+      background: #37474f;
       z-index: 1000;
       -webkit-transform: translateX(0);
       -ms-transform: translateX(0);
@@ -130,38 +181,6 @@
 
     #loader-wrapper .loader-section.section-right {
       right: 0;
-    }
-
-
-    .loaded #loader-wrapper .loader-section.section-left {
-      -webkit-transform: translateX(-100%);
-      -ms-transform: translateX(-100%);
-      transform: translateX(-100%);
-      -webkit-transition: all 0.7s 0.3s cubic-bezier(0.645, 0.045, 0.355, 1.000);
-      transition: all 0.7s 0.3s cubic-bezier(0.645, 0.045, 0.355, 1.000);
-    }
-
-    .loaded #loader-wrapper .loader-section.section-right {
-      -webkit-transform: translateX(100%);
-      -ms-transform: translateX(100%);
-      transform: translateX(100%);
-      -webkit-transition: all 0.7s 0.3s cubic-bezier(0.645, 0.045, 0.355, 1.000);
-      transition: all 0.7s 0.3s cubic-bezier(0.645, 0.045, 0.355, 1.000);
-    }
-
-    .loaded #loader {
-      opacity: 0;
-      -webkit-transition: all 0.3s ease-out;
-      transition: all 0.3s ease-out;
-    }
-
-    .loaded #loader-wrapper {
-      visibility: hidden;
-      -webkit-transform: translateY(-100%);
-      -ms-transform: translateY(-100%);
-      transform: translateY(-100%);
-      -webkit-transition: all 0.3s 1s ease-out;
-      transition: all 0.3s 1s ease-out;
     }
 
     .no-js #loader-wrapper {
@@ -192,16 +211,26 @@
       color: #FFF;
       opacity: 0.5;
     }
+
   </style>
-  </head>
-  <body>
-    <div id="app">
-	    <div id="loader-wrapper">
-		    <div id="loader"></div>
-		    <div class="loader-section section-left"></div>
-		    <div class="loader-section section-right"></div>
-		    <div class="load_title">正在加载系统资源，请耐心等待</div>
-        </div>
-	</div>
-  </body>
+</head>
+<body>
+<div id="app">
+  <div id="loader-wrapper">
+    <div id="loader" class="spinner-box">
+      <div class="configure-border-1">
+        <div class="configure-core"></div>
+      </div>
+      <div class="configure-center">
+          <img id="loaderLogo" src="favicon.ico" alt="logo">
+      </div>
+      <div class="configure-border-2">
+        <div class="configure-core"></div>
+      </div>
+    </div>
+    <div class="loader-section section-left"></div>
+    <div class="loader-section section-right"></div>
+  </div>
+</div>
+</body>
 </html>
