--- a/public/index.html
+++ b/public/index.html
@@ -222,7 +222,7 @@
         <div class="configure-core"></div>
       </div>
       <div class="configure-center">
-          <img id="loaderLogo" src="logo.png" alt="logo">
+          <img id="loaderLogo" src="<%= BASE_URL %>logo.png" alt="logo">
       </div>
       <div class="configure-border-2">
         <div class="configure-core"></div>
